infrastructure/system/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
  annotations:
    lbipam.cilium.io/ips: "192.168.0.7"
spec:
  type: LoadBalancer
  selector:
    app: homepage
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
