infrastructure/system/homepage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  parentRefs:
    - name: homelab
      namespace: kube-system
      sectionName: https
  hostnames:
    - homepage.home.didcot
  rules:
    - backendRefs:
        - name: homepage
          port: 80
